name:                name-tagger-hs
version:             0.1.0.0
synopsis:            Finds names in string
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Laura Dietz <dietz@smart-cactus.org>, Ben Gamari <ben@smart-cactus.org>
maintainer:          dietz@smart-cactus.org
copyright:           (c) 2015 Ben Gamari, Laura Dietz
build-type:          Simple
cabal-version:       >=1.10

executable name-tagger-hs
  main-is:             Main.hs
  build-depends:       base >=4.6 && <4.9, containers, text
  hs-source-dirs:      src
  default-language:    Haskell2010
